- Replaced Base64 library with JDK 1.8 built-in one. - Added API documentation in mark down format. - Added new module saturn-commons-spring.